# ai-command-auditor

./: .gitignore  .pre-commit-config.yaml  HOOKS_SETUP.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  show-ports.sh
.github/workflows/: ci.yml  deploy-docs.yml
ai_command_auditor/: __init__.py
ai_command_auditor/analysis/: __init__.py
ai_command_auditor/cli/: __init__.py  main.py
ai_command_auditor/core/: __init__.py  config.py  rules.py  templates.py  validator.py
ai_command_auditor/templates/: __init__.py
ai_command_auditor/templates/base/: README.md.template  auditor.yml.template  openai-prompts.yml.template  security-rules.yml.template
ai_command_auditor/templates/general/: auditor.yml.template  openai-prompts.yml.template  security-rules.yml.template
ai_command_auditor/templates/python/: auditor.yml.template  openai-prompts.yml.template  security-rules.yml.template
config/: config.template.yml  config.yml
docs/: Gemfile  README.md  _config.yml  faq.md  index.md
docs/api/: cli.md  index.md  python.md
docs/configuration/: ai-prompts.md  index.md  security-rules.md
docs/examples/: index.md  tutorial.md
docs/installation/: index.md  methods.md
docs/planning/: project_plan.md  task-planning.md
docs/planning/task-planning/: task-8-devcontainer-integration.md  task-8.3-configuration-template-system.md  task-8.4-installer-script-creation.md  task-8.5-github-pages-documentation.md
docs/support/: faq.md  index.md
docs/user-guides/: concept.md
scripts/: README.md  setup-hooks.sh
scripts/ai-prompts/core/: check_command_prompt.md
scripts/bash/utils/: bash-command-hook.sh
scripts/hooks/: pre-commit.sh  pre-push.sh
scripts/python/: __init__.py
scripts/python/analysis/: __init__.py
scripts/python/core/: __init__.py  check_command.py  config.py  security.py
scripts/python/reporting/: __init__.py
scripts/python/tests/: __init__.py  test_basic.py
scripts/rules/ai-auditor/: check_command_prompt.md
scripts/rules/python-auditor/: check_command_rules.yml
