[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-command-auditor"
version = "1.0.0"
authors = [
    {name = "Etherisc", email = "dev@etherisc.com"},
]
description = "AI-powered command auditing and security validation tool"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["security", "command-validation", "ai", "devops", "git-hooks"]
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "colorama>=0.4.4",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "bandit>=1.7.4",
    "pre-commit>=2.20.0",
    "twine>=4.0.0",
    "build>=0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/etherisc/ai-command-auditor"
"Bug Reports" = "https://github.com/etherisc/ai-command-auditor/issues"
"Source" = "https://github.com/etherisc/ai-command-auditor"
"Documentation" = "https://etherisc.github.io/ai-command-auditor"

[project.scripts]
ai-auditor = "ai_command_auditor.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_command_auditor*"]

[tool.setuptools.package-data]
ai_command_auditor = ["templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["ai_command_auditor/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=ai_command_auditor --cov-report=term-missing"

[tool.coverage.run]
source = ["ai_command_auditor"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
